<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_pop_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- 顶部 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp245"
            android:background="@mipmap/bg_pop_menu_1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="@dimen/dp70"
                android:layout_height="@dimen/dp30"
                android:layout_marginBottom="@dimen/dp13"
                android:layout_marginTop="@dimen/dp30"
                android:background="@null"
                android:src="@mipmap/icon_setting" />

            <!-- 头像+登录/注册 -->


            <!-- 头像 -->

            <LinearLayout
                android:layout_width="@dimen/dp95"
                android:layout_height="@dimen/dp95"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_head_circle"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_head_pop"
                    android:layout_width="@dimen/dp87"
                    android:layout_height="@dimen/dp87"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_head" />
            </LinearLayout>

            <!-- 登录 -->

            <TextView
                android:id="@+id/tv_userName_pop"
                style="@style/tab3_top_text"
                android:layout_height="@dimen/dp50"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp53"
                android:layout_marginTop="@dimen/dp13"
                android:text="@string/login" />
        </LinearLayout>
        <!-- 顶部 end -->


        <!-- 菜单 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@mipmap/bg_pop_menu_2"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_is_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <!-- 我的资料 -->

                <LinearLayout
                    android:id="@+id/ll_menu_1"
                    style="@style/tab3_menu_item">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginStart="@dimen/dp60"
                        android:src="@mipmap/icon_pop_menu_1" />

                    <TextView
                        style="@style/tab1_left_menu_item_text"
                        android:text="@string/pop_menu_1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_menu_2"
                    style="@style/tab3_menu_item">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginStart="@dimen/dp60"
                        android:src="@mipmap/icon_pop_menu_2" />

                    <TextView
                        style="@style/tab1_left_menu_item_text"
                        android:text="@string/pop_menu_2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_menu_3"
                    style="@style/tab3_menu_item">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginStart="@dimen/dp60"
                        android:src="@mipmap/icon_pop_menu_3" />

                    <TextView
                        style="@style/tab1_left_menu_item_text"
                        android:text="@string/pop_menu_3" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_menu_4"
                style="@style/tab3_menu_item">

                <ImageView
                    android:layout_width="@dimen/dp26"
                    android:layout_height="@dimen/dp26"
                    android:layout_marginStart="@dimen/dp60"
                    android:src="@mipmap/icon_pop_menu_4" />

                <TextView
                    style="@style/tab1_left_menu_item_text"
                    android:text="@string/pop_menu_4" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_menu_5"
                style="@style/tab3_menu_item">

                <ImageView
                    android:layout_width="@dimen/dp26"
                    android:layout_height="@dimen/dp26"
                    android:layout_marginStart="@dimen/dp60"
                    android:src="@mipmap/icon_pop_menu_5" />

                <TextView
                    style="@style/tab1_left_menu_item_text"
                    android:text="@string/pop_menu_5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_menu_6"
                style="@style/tab3_menu_item">

                <ImageView
                    android:layout_width="@dimen/dp26"
                    android:layout_height="@dimen/dp26"
                    android:layout_marginStart="@dimen/dp60"
                    android:src="@mipmap/icon_pop_menu_6" />

                <TextView
                    style="@style/tab1_left_menu_item_text"
                    android:text="@string/pop_menu_6" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_menu_7"
                style="@style/tab3_menu_item">

                <ImageView
                    android:layout_width="@dimen/dp26"
                    android:layout_height="@dimen/dp26"
                    android:layout_marginStart="@dimen/dp60"
                    android:src="@mipmap/icon_pop_menu_7" />

                <TextView
                    style="@style/tab1_left_menu_item_text"
                    android:text="@string/pop_menu_7" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_menu_8"
                style="@style/tab3_menu_item">

                <ImageView
                    android:layout_width="@dimen/dp26"
                    android:layout_height="@dimen/dp26"
                    android:layout_marginStart="@dimen/dp60"
                    android:src="@mipmap/icon_pop_menu_8" />

                <TextView
                    style="@style/tab1_left_menu_item_text"
                    android:text="@string/pop_menu_8" />
            </LinearLayout>

        </LinearLayout>

        <!-- 菜单end -->

    </LinearLayout>

</LinearLayout>